非推奨のAPIを修正